{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 325,
  "lineage": "f8861ac6-b00e-2515-42b5-2a3d523c48d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468704076652:security-group/sg-02069953ece6d5564",
            "description": "Elastic Beanstalk EC2 Security Group",
            "egress": [],
            "id": "sg-02069953ece6d5564",
            "ingress": [],
            "name": "eb-sg",
            "name_prefix": "",
            "owner_id": "468704076652",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0241f7fffff83ad0d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eb_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-323794207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-012e71f44286f8fc7",
            "security_group_rule_id": "sgr-0adeafa7a464919a0",
            "self": false,
            "source_security_group_id": "sg-02069953ece6d5564",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "security_group_id"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.eb_sg",
            "data.aws_ssm_parameter.rds_security_group_id"
          ]
        }
      ]
    }
  ]
}